--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "type": "module",
   "main": "index.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "nodemon api/index.js",
     "start": "node api/index.js",
